# gws-cv-mail-harness

./: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  PLANS.md  README.md  pyproject.toml
apps/: README.md
apps/cli/: __init__.py  __main__.py
docs/: README.md
docs/contracts/: config-model.md  digest-format.md  gmail-search.md  sheet-schema.md  state-store.md
docs/workflows/: live-smoke-validation.md
runtime/: config.local.example.yaml
scripts/: README.md  preflight.sh  run-smoke.sh
tasks/: README.md
tests/: README.md
tests/fixtures/gws/: auth_status.out  gmail_read_dry_run.out  gmail_search_dry_run.out  gmail_send_dry_run.out  sheets_append_dry_run.out
tests/integration/: test_gws_contract_fixtures.py
tests/unit/: test_config.py  test_google_workspace.py  test_runner.py  test_state_store.py
